# MAPF

./: .gitignore  Dockerfile  Doxyfile  README.md  map.py  multi_agent_map.py  ros2.service  ros_entrypoint.sh  start.sh  start_ros2.sh  startup.sh  stop_ros2.sh
autorun/: start_ros2.sh  stop_ros2.sh
dubins_planner/: CMakeLists.txt  package.xml
dubins_planner/launch/: dubins.launch.py
dubins_planner/src/: dubins.cpp  path_planner.cpp
evader/: CMakeLists.txt  package.xml
evader/src/: evader.cpp
get_positions/: CMakeLists.txt  package.xml
get_positions/src/: get_positions.cpp
map_pkg/: CMakeLists.txt
map_pkg/config/: map_config.yaml
map_pkg/include/geometry/: homog2d.hpp
map_pkg/launch/: map_env.launch.py
map_pkg/src/: send_gates.cpp  send_victims.cpp
path_planning/: CMakeLists.txt  package.xml
path_planning/include/: CoordinateMapper.hpp  DijkstraSearch.hpp  DubinsPath.hpp  RRTStarDubins.hpp  VoronoiDijkstra.hpp  kdtree.hpp
path_planning/src/: CoordinateMapper.cpp  DijkstraSearch.cpp  DubinsPath.cpp  RRTStarDubins.cpp  VoronoiDijkstra.cpp  env_map.cpp  env_map_victims.cpp  grid_based.py  kdtree.cpp  orchestrator.cpp  orchestrator_victims.cpp  rrt_star.cpp  rrt_start.ipynb  test.cpp  victims.cpp  victims_env_map.cpp  voronoi.cpp  voronoi.ipynb  voronoi_map.cpp
path_planning/src/lib/: DijkstraSearch.cpp  DubinsPath.cpp  RRTStarDubins.cpp  VoronoiDijkstra.cpp  kdtree.cpp
path_planning/src/python_code/: dijkstra_search.py  orchestrator.ipynb  orchestrator_mine.ipynb  rrt_star.py  rrt_star_simplify.ipynb  voronoi.ipynb  voronoi_debug.ipynb  voronoi_pr.ipynb
path_planning/src/rtt_start_python/: dubins_planner.py  rrt_start_simplify.ipynb
projects/launch/: evacuation.launch.py  evader.launch.py  victims.launch.py
remote_control/: CMakeLists.txt  package.xml
remote_control/include/: hardwareparameters.h
remote_control/src/: joystick_control.cpp  remote_control.cpp
send_borders/: CMakeLists.txt  package.xml
send_borders/src/: send_borders.cpp
send_gates/: CMakeLists.txt  package.xml
send_gates/src/: send_gates.cpp
send_obstacles/: CMakeLists.txt  package.xml
send_obstacles/src/: send_obstacles.cpp
shelfino_description/: package.xml
shelfino_description/launch/: robot_state_publisher.launch.py  rviz.launch.py
shelfino_description/models/lidar2d/: model.sdf
shelfino_description/models/shelfino/: model.config  model.sdf_BACKUP_40005.xacro
shelfino_gazebo/launch/: shelfino.launch.py
shelfino_navigation/: CMakeLists.txt
shelfino_navigation/config/: shelfino.yaml
shelfino_navigation/launch/: shelfino_nav.launch.py
shelfino_navigation/map/: turtlebot3_world.yaml
shelfino_navigation/param/: shelfino_gazebo.yaml
shelfino_node/include/: hardwareglobalinterface.h  hardwareparameters.h
shelfino_node/launch/: bringup.launch.py
shelfino_node/src/: hardwareglobalinterface.cpp  shelfino_hw_publisher.cpp
